--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project",
+  "name": "our-nest",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -7,8 +7,11 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
+    "build:public": "nest build && cpy ./public/**/* ./dist/public --parents",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "set NODE_OPTIONS=--max-old-space-size=512 && nest start --watch",
+    "start:custom": "npm run build:public && npm run start:memory:prod",
+    "start:memory:prod": "set NODE_OPTIONS=--max-old-space-size=512 && node dist/main",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -17,43 +20,71 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json --forceExit",
+    "forever": "forever start -m 999 -a -o log/out.log -e log/err.log dist/main.js"
   },
   "dependencies": {
-    "@nestjs/cache-manager": "^2.2.0",
-    "@nestjs/common": "^10.0.0",
+    "@nestjs-modules/ioredis": "^2.0.2",
+    "@nestjs/axios": "^3.0.1",
+    "@nestjs/cache-manager": "^2.2.2",
+    "@nestjs/common": "^10.3.7",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mongoose": "^10.0.6",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.8",
+    "@nestjs/platform-ws": "^10.2.7",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^7.1.12",
     "@nestjs/typeorm": "^10.0.0",
-    "@types/cache-manager": "^4.0.6",
+    "@nestjs/websockets": "^10.3.8",
+    "@types/passport-jwt": "^4.0.1",
+    "@willsoto/nestjs-prometheus": "^6.0.0",
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
-    "cache-manager": "^5.4.0",
+    "cache-manager": "^5.5.2",
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "connect-redis": "^7.1.1",
     "dayjs": "^1.11.10",
-    "fastify-swagger": "^5.2.0",
-    "firebase-admin": "^11.11.0",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "firebase-admin": "^11.10.1",
     "google-translate-api": "^2.3.0",
-    "mysql2": "^3.6.1",
+    "ioredis": "^5.4.1",
+    "json2csv": "^6.0.0-alpha.2",
+    "mongoose": "^8.4.3",
+    "mysql2": "^3.6.0",
+    "nestjs-session": "^3.0.1",
+    "nodemailer": "^6.9.14",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cache-manager": "^4.0.6",
+    "@types/cache-manager-redis-store": "^2.0.4",
+    "@types/connect-redis": "^0.0.23",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-google-oauth20": "^2.0.14",
+    "@types/redis": "^4.0.11",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "cpy-cli": "^5.0.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
